k8s2/apps/redmine/overlays/production/patch-replicas.yaml
# zum start des deployments werden 2 Pods gestartet
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 2
