k8s2/apps/redmine/overlays/production/patch-resources.yaml
# Ressourcen
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  template:
    spec:
      containers:
        - name: redmine
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
