k8s2/apps/redmine/overlays/production/redmine-ingress.yaml
# k3s traefik ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redmine
                port:
                  number: 80
